[project]
name = "bt-test-interfaces"
readme = "../README.md"
authors = [{name = "Pandora", email = "pandora-core@google.com"}]
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = ["protobuf>=4.22.0"]

[project.urls]
Source = "https://github.com/google/bt-test-interfaces"

[tool.flit.module]
name = "pandora"

[tool.flit.sdist]
include = ["_build", ".."]

[build-system]
requires = ["flit_core==3.7.1", "grpcio-tools>=1.51.1"]
build-backend = "_build.backend"
backend-path = ["."]
